[tool.poetry]

name = "checkio"
version = "0.0"
description = "My solutions for CheckIO tasks"

license = "MIT"

authors = ["Ken Lai <ken.mercus.lai@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/checkio"
documentation = "https://checkio.readthedocs.io"
repository = "https://github.com/KenMercusLai/checkio"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]

[tool.poetry.dependencies]

python = "^3.6"

[tool.poetry.dev-dependencies]

# Formatters
black = "=18.9b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^3.3"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

# [tool.poetry.scripts]

# checkio = "checkio.cli:main"

[tool.black]

py36 = true
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
